* Setup frontend to give feedback